[Compositor event queue] Queue GestureFlingStart/Cancel together with scroll/pinch

Currently only |GestureScroll*| and |GesturePinch*| will be put into the queue. We
should cover |GestureFlingStart/Cancel| as well since it's order-sensitive.

BUG=693289

Review-Url: https://codereview.chromium.org/2746513002
Cr-Commit-Position: refs/heads/master@{#456772}

Former-commit-id: ad977926ecd213a1063fb7d429d6fd1d5ee7dce7